Closed Bug 1204584 Opened 10 years ago Closed 10 years ago

Psuedo frames created by js::AutoSPSEntry don't get their category propogated

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: fitzgen, Assigned: fitzgen)

References

Details

Attachments

(1 file, 2 obsolete files)

This commit renames ProfileEntry::set{Js,Cpp}Frame methods to ProfileEntry::init{Js,Cpp}Frame to highlight the fact that they are intended to initialize the entry, and that setting other flags should happen after one of these calls.
Attachment #8662083 - Flags: review?(kvijayan)
Verified that this also fixes bug 1164344 and that the category information is indeed passed along now.
Comment on attachment 8662083 [details] [diff] [review] Ensure that entries created by AutoSPSEntry propogate their category information Review of attachment 8662083 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/public/ProfilingStack.h @@ +134,5 @@ > return flags_ & CATEGORY_MASK; > } > void setCategory(Category c) volatile { > + MOZ_ASSERT(c != Category::FIRST); > + MOZ_ASSERT(c != Category::LAST); This assert seems wrong to me. FIRST and LAST are valid categories (aliases for OTHER and EVENTS). Shouldn't it be something like: MOZ_ASSERT(c >= Category::FIRST && c <= Category::LAST) ??
See Also: → 1205782
This commit renames ProfileEntry::set{Js,Cpp}Frame methods to ProfileEntry::init{Js,Cpp}Frame to highlight the fact that they are intended to initialize the entry, and that setting other flags should happen after one of these calls.
Attachment #8662083 - Attachment is obsolete: true
Attachment #8662083 - Flags: review?(kvijayan)
Attachment #8662583 - Flags: review?(kvijayan)
This commit renames ProfileEntry::set{Js,Cpp}Frame methods to ProfileEntry::init{Js,Cpp}Frame to highlight the fact that they are intended to initialize the entry, and that setting other flags should happen after one of these calls.
Attachment #8662583 - Attachment is obsolete: true
Attachment #8662583 - Flags: review?(kvijayan)
Attachment #8662596 - Flags: review?(kvijayan)
Attachment #8662596 - Flags: review?(kvijayan) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Depends on: 1209779
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: