Bug 1204584 - Ensure that entries created by AutoSPSEntry propogate their category information; r=djvj

This commit renames ProfileEntry::set{Js,Cpp}Frame methods to
ProfileEntry::init{Js,Cpp}Frame to highlight the fact that they are intended to
initialize the entry, and that setting other flags should happen after one of
these calls.